# fastapi-finance-tracker

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
docker-composes/: .env.template  db.yaml
src/: .env.template  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_03_08_2020-b7e9c1301f5c_create_transaction_and_category_tables.py  2025_03_09_1331-58bc3abc7a83_create_table_budget.py
src/api/: __init__.py
src/api/api_v1/: __init__.py
src/core/: config.py  database.py
src/core/utils/: __init__.py
src/modules/: __init__models__.py
src/modules/base/: __init__.py  base_entity.py  base_exception.py  base_model.py  base_repository.py  base_service.py  base_value_object.py
src/modules/base/dependencies/: __init__.py  base_dependencies.py
src/modules/base/exceptions/: __init__.py  base_exception.py  field_does_not_exist_exception.py  model_not_founded_exception.py  title_validate_exception.py
src/modules/categories/domain/entities/: __init__.py  categories.py
src/modules/categories/domain/interfaces/: __init__.py  category_repository_interface.py
src/modules/categories/domain/services/: __init__.py  category_service.py
src/modules/categories/domain/value_objects/: __init__.py  title.py
src/modules/categories/exceptions/: __init__.py  category_already_exist_exception.py  category_not_founded_exception.py  field_does_not_exist_exception.py  title_validate_exception.py
src/modules/categories/infra/orms/: __init__.py  categories.py
src/modules/transactions/exceptions/: __init__.py  budget_limit_exceeded_exception.py
(+37 files in other folders)
