[tool.poetry]
package-mode=false
version = "0.5.0"
description = "Приложение для управления финансами"
authors = ["Afonderkin Stanislav"]
license = "MIT"

[tool.poetry.dependencies]
python="^3.13"
fastapi = "^0.115.11"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
asyncpg = "^0.30.0"
alembic = "^1.15.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
